Bug 70315 - Protected Sheet Problem
Summary: Protected Sheet Problem
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.0 target:4.1.4
Keywords: bibisected, regression
: 70503 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-09 11:25 UTC by santanu
Modified: 2015-12-17 07:32 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
can't edit cells these are unprotected (9.58 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2013-10-09 11:25 UTC, santanu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description santanu 2013-10-09 11:25:41 UTC
Created attachment 87331 [details]
can't edit cells these are unprotected

Problem description: I have attached a excel file. In excel file some cells are protected and rest of cells are unprotected.

When I open this file LO 4.1 I can't edit cells these are unprotected. It is showing a message "Protected cell can't be modified".

When I open this file LO 4.0 it's working fine means i can edit cell/cells which is/are not protect. But i wonder when i unprotect sheet it is not prompt for password.


Current behavior: can't edit cells these are unprotected

Expected behavior: edit cells these are unprotected

              
Operating System: Windows XP
Version: 4.1.1.2 release
Comment 1 tommy27 2013-10-09 20:27:36 UTC
I confirm issue and regression under Win7 64bit.

4.0.5 --> only some cells are protected

4.1.0, 4.1.1, 4.1.2 --> whole sheet is protected

I add Calc expert to CC-list.

I wonder if bug 69704 can be related.
Comment 2 Terrence Enger 2013-10-10 22:59:47 UTC
from git bisect:

    0ab93000f1bffa3fa728fc7a673b722277b1b241 is the first bad commit
    ...
        source-hash-08bb8fca4144608237418d64b1479840c408256f
        ...

and from git bisect log

    # bad: [d31848bf3b700a22d127d7c775a0f910a7e133d0] source-hash-86cbe18a6143bf054c31f69dc97368dfdd3ad374
    # good: [3e7462bd65e692bf0592d5b080b7716341b62a47] source-hash-1eddfce9894fd05315173744f495619189093dc7
    git bisect start 'latest' 'oldest'
    # good: [578fb08152ad11454e2f09ad6f8c8e527da817de] source-hash-4e3e171262aed0e52fa76158950d5be770249e80
    git bisect good 578fb08152ad11454e2f09ad6f8c8e527da817de
    # bad: [efb04c1c794ef7fc4cda1eb80880d333ca969a5e] source-hash-7908692490120350f2ad45241f7b19ba52dc0489
    git bisect bad efb04c1c794ef7fc4cda1eb80880d333ca969a5e
    # bad: [b46b5a58fcaec85eefb31b23afb0fc389a0c5334] source-hash-34c1b7bdd0bca4753f66a7d17ef46647a64a319e
    git bisect bad b46b5a58fcaec85eefb31b23afb0fc389a0c5334
    # good: [5bc142137acfc7a70e919009ef5b64fc7163b75f] source-hash-a140350dae5db298094583763daf0a8bed8480cb
    git bisect good 5bc142137acfc7a70e919009ef5b64fc7163b75f
    # good: [c648b138202c9f97ac5ca8b39e08117486839adf] source-hash-cdad97557a729ecbbe0236f7998647c5249a005f
    git bisect good c648b138202c9f97ac5ca8b39e08117486839adf
    # bad: [140ebc45cc96b6cacc2d03fba13c2c189e4d4af9] source-hash-0f33ad3847da22350e69fd998d7494e4334c1ed9
    git bisect bad 140ebc45cc96b6cacc2d03fba13c2c189e4d4af9
    # bad: [51f094cf62f3f4b4f68f9c77f052d896a97e04e6] source-hash-0143805a565418d2a114c16b7eeba3b784176d9e
    git bisect bad 51f094cf62f3f4b4f68f9c77f052d896a97e04e6
    # good: [29996f9f05eb08d0d9aafaba95b969185aeff47c] source-hash-992da0d5cf04497bad55637f6a6ebfcdaec03e16
    git bisect good 29996f9f05eb08d0d9aafaba95b969185aeff47c
    # bad: [0ab93000f1bffa3fa728fc7a673b722277b1b241] source-hash-08bb8fca4144608237418d64b1479840c408256f
    git bisect bad 0ab93000f1bffa3fa728fc7a673b722277b1b241


IIUC, the problem arises in the 32 source commits in the half-open
range 08bb8fc..992da02.  Noel, I notice your name appears several
times in that range.  Does any of this ring a bell with you?  If not,
I apologize for the noise.


HTH,
Terry.
Comment 3 Terrence Enger 2013-10-15 18:14:30 UTC
*** Bug 70503 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2013-11-02 15:18:04 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=512a14438c4098ca2e30d0b10b6e18506c8475f1

remember column style during XLSX import, fdo#70315



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-11-02 18:08:26 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c18b9dfe4319bc27aa245c58d4f0dfc6cb689ef

add test case for fdo#70315



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-11-02 22:33:40 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c4f9aff76e931613c3e6a99879c2b5353231853&h=libreoffice-4-1

remember column style during XLSX import, fdo#70315


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Markus Mohrhard 2013-11-24 17:01:17 UTC
*** Bug 70499 has been marked as a duplicate of this bug. ***
Comment 8 Robinson Tryon (qubit) 2015-12-17 07:32:38 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]