remember column style during XLSX import, fdo#70315

WE overwrote the column style that was set earlier with the default
style.

Change-Id: I4c02e1cdd3e72f27d75b8153e2af45b5658ff456